基本功能实现

--- a/simulator/laya/pages/simulator/PlayMainView.ui
+++ b/simulator/laya/pages/simulator/PlayMainView.ui
@@ -2,8 +2,8 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":2,
-    "props":{"width":400,"sceneColor":"#000000","height":300},
+    "selecteID":3,
+    "props":{"width":577,"sceneWidth":577,"sceneHeight":295,"sceneColor":"#000000","height":295},
     "nodeParent":-1,
     "label":"View",
     "isOpen":true,
@@ -16,7 +16,7 @@
             "x":15,
             "type":"UIView",
             "source":"simulator/ItemList.ui",
-            "props":{"y":12,"x":289,"var":"itemList","runtime":"view.itemlist.ItemList"},
+            "props":{"y":17,"x":473,"var":"itemList","runtime":"view.itemlist.ItemList"},
             "nodeParent":1,
             "label":"UIView(itemList)",
             "isDirectory":false,
@@ -30,7 +30,7 @@
             "x":15,
             "type":"UIView",
             "source":"simulator/ActionList.ui",
-            "props":{"y":-1,"x":-1,"var":"actionList","runtime":"view.actionlist.ActionList"},
+            "props":{"x":-1,"width":400,"var":"actionList","top":5,"runtime":"view.actionlist.ActionList","bottom":5},
             "nodeParent":1,
             "label":"UIView(actionList)",
             "isDirectory":false,
