--- a/simulator/laya/pages/simulator/ActionItem.ui
+++ b/simulator/laya/pages/simulator/ActionItem.ui
@@ -2,7 +2,7 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":4,
+    "selecteID":3,
     "props":{"width":247,"sceneWidth":247,"sceneHeight":25,"sceneColor":"#000000","height":25},
     "nodeParent":-1,
     "label":"View",
@@ -28,7 +28,7 @@
         {
             "x":15,
             "type":"Button",
-            "props":{"y":1,"x":207,"width":40,"var":"actionBtn","skin":"comp/button.png","label":"do","height":24},
+            "props":{"y":1,"x":207,"width":40,"var":"actionBtn","skin":"comp/button.png","labelColors":"#ffffff,#ffffff,#ffffff,#ffffff","label":"do","height":24},
             "nodeParent":1,
             "label":"Button(actionBtn)",
             "isDirectory":false,
