--- a/simulator/laya/pages/simulator/ItemList.ui
+++ b/simulator/laya/pages/simulator/ItemList.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":6,
-    "selecteID":4,
+    "selectedBox":1,
+    "selecteID":6,
     "props":{"width":104,"sceneWidth":104,"sceneHeight":268,"sceneColor":"#000000","height":268},
     "nodeParent":-1,
     "label":"View",
@@ -15,7 +15,7 @@
         {
             "x":15,
             "type":"List",
-            "props":{"y":-1,"x":2,"width":102,"var":"list","height":269},
+            "props":{"x":2,"width":102,"var":"list","vScrollBarSkin":"comp/vscroll.png","top":2,"bottom":2},
             "nodeParent":1,
             "label":"List(list)",
             "isOpen":true,
