--- a/debugtoolplatform/deskplatform/laya/pages/deskplatform/MainView.ui
+++ b/debugtoolplatform/deskplatform/laya/pages/deskplatform/MainView.ui
@@ -1,7 +1,7 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":3,
+    "selectedBox":2,
     "selecteID":6,
     "props":{"width":400,"sceneColor":"#000000","height":300},
     "nodeParent":-1,
@@ -14,35 +14,22 @@
     "child":[
         {
             "x":15,
-            "type":"Button",
-            "props":{"y":7,"x":320,"var":"startBtn","skin":"comp/button.png","label":"启动"},
-            "nodeParent":1,
-            "label":"Button(startBtn)",
-            "isDirectory":false,
-            "isAniNode":true,
-            "hasChild":false,
-            "compId":2,
-            "child":[
-                ]
-        },
-        {
-            "x":15,
             "type":"List",
-            "props":{"x":17,"width":126,"var":"domainList","vScrollBarSkin":"comp/vscroll.png","top":20,"scrollBarSkin":"comp/vscroll.png","repeatX":1,"bottom":20},
+            "props":{"x":5,"width":126,"var":"itemList","vScrollBarSkin":"comp/vscroll.png","top":5,"scrollBarSkin":"comp/vscroll.png","repeatX":1,"bottom":5},
             "nodeParent":1,
-            "label":"List(domainList)",
+            "label":"List(itemList)",
             "isOpen":true,
             "isDirectory":true,
             "isAniNode":true,
             "hasChild":true,
-            "compId":3,
+            "compId":2,
             "child":[
                 {
                     "x":30,
                     "type":"UIView",
-                    "source":"debugplatform/chrome/DomainListItem.ui",
-                    "props":{"y":0,"x":0,"runtime":"debugplatform.chrome.DomainListItem","renderType":"render","name":"render"},
-                    "nodeParent":3,
+                    "source":"deskplatform/MainViewItem.ui",
+                    "props":{"y":0,"x":0,"runtime":"view.MainViewItem","name":"render"},
+                    "nodeParent":2,
                     "label":"UIView(render)",
                     "isDirectory":false,
                     "isAniNode":false,
@@ -51,6 +38,19 @@
                     "child":[
                         ]
                 }]
+        },
+        {
+            "x":15,
+            "type":"Box",
+            "props":{"var":"contentBox","top":5,"skin":"comp/blank.png","right":5,"left":150,"bottom":5},
+            "nodeParent":1,
+            "label":"Box(contentBox)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":5,
+            "child":[
+                ]
         }],
     "animations":[
         {
