--- a/debugtoolplatform/deskplatform/laya/pages/deskplatform/ResPanel.ui
+++ b/debugtoolplatform/deskplatform/laya/pages/deskplatform/ResPanel.ui
@@ -1,11 +1,10 @@
 {
     "x":0,
-    "type":"DragView",
-    "selectedBox":11,
-    "selecteID":18,
-    "props":{"width":200,"title":"资源","scenecolor":"#dddddd","layers":"1,1,0,0,第 1 层","hitTestPrior":true,"height":300},
+    "type":"View",
+    "selectedBox":1,
+    "props":{"width":200,"title":"资源","scenecolor":"#dddddd","sceneColor":null,"layers":"1,1,0,0,第 1 层","hitTestPrior":true,"height":300},
     "nodeParent":-1,
-    "label":"DragView",
+    "label":"View",
     "isOpen":true,
     "isDirectory":true,
     "isAniNode":true,
