--- a/debugtoolplatform/deskplugins/Demo/laya/pages/mindmap/MapItem.ui
+++ b/debugtoolplatform/deskplugins/Demo/laya/pages/mindmap/MapItem.ui
@@ -2,8 +2,8 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":2,
-    "props":{"width":129,"sceneWidth":129,"sceneHeight":23,"sceneColor":"#000000","height":23},
+    "selecteID":5,
+    "props":{"width":162,"sceneWidth":162,"sceneHeight":22,"sceneColor":"#000000","height":22},
     "nodeParent":-1,
     "label":"View",
     "isOpen":true,
@@ -22,6 +22,45 @@
             "isAniNode":true,
             "hasChild":false,
             "compId":2,
+            "child":[
+                ]
+        },
+        {
+            "x":15,
+            "type":"Button",
+            "props":{"y":11,"x":131,"var":"downBtn","skin":"comp/down.png"},
+            "nodeParent":1,
+            "label":"Button(downBtn)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":3,
+            "child":[
+                ]
+        },
+        {
+            "x":15,
+            "type":"Button",
+            "props":{"y":-1,"x":131,"var":"upBtn","skin":"comp/up.png"},
+            "nodeParent":1,
+            "label":"Button(upBtn)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":4,
+            "child":[
+                ]
+        },
+        {
+            "x":15,
+            "type":"Radio",
+            "props":{"y":4,"x":147,"var":"selectBtn","skin":"comp/selectbtn.png"},
+            "nodeParent":1,
+            "label":"Radio(selectBtn)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":5,
             "child":[
                 ]
         }],
