--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/DataOperate.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/DataOperate.ui
@@ -2,8 +2,8 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":2,
-    "props":{"width":162,"sceneWidth":162,"sceneHeight":22,"sceneColor":"#000000","height":22},
+    "selecteID":3,
+    "props":{"width":240,"sceneColor":"#000000","height":30},
     "nodeParent":-1,
     "label":"View",
     "isOpen":true,
@@ -15,9 +15,9 @@
         {
             "x":15,
             "type":"TextInput",
-            "props":{"var":"text","text":"TextInput","skin":"comp/textinput.png","sizeGrid":"7,10,5,5","right":33,"left":0,"color":"#93eedf","align":"center"},
+            "props":{"y":4,"x":10,"width":95,"text":"TextInput","skin":"comp/input_22.png","promptColor":"#f31713","height":22,"color":"#e80d09"},
             "nodeParent":1,
-            "label":"TextInput(text)",
+            "label":"TextInput",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
@@ -27,10 +27,10 @@
         },
         {
             "x":15,
-            "type":"Button",
-            "props":{"y":11,"var":"downBtn","skin":"comp/down.png","right":19},
+            "type":"ComboBox",
+            "props":{"y":5,"x":114,"width":53,"skin":"comp/combobox.png","sizeGrid":"0,31,0,0","selectedIndex":0,"labels":"+,-","height":22},
             "nodeParent":1,
-            "label":"Button(downBtn)",
+            "label":"ComboBox",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
@@ -40,27 +40,14 @@
         },
         {
             "x":15,
-            "type":"Button",
-            "props":{"y":-1,"var":"upBtn","skin":"comp/up.png","right":19},
+            "type":"TextInput",
+            "props":{"y":5,"x":174,"width":60,"text":"TextInput","skin":"comp/input_22.png","height":22,"color":"#ec130f"},
             "nodeParent":1,
-            "label":"Button(upBtn)",
+            "label":"TextInput",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
             "compId":4,
-            "child":[
-                ]
-        },
-        {
-            "x":15,
-            "type":"Radio",
-            "props":{"y":4,"var":"selectBtn","skin":"comp/selectbtn.png","right":1},
-            "nodeParent":1,
-            "label":"Radio(selectBtn)",
-            "isDirectory":false,
-            "isAniNode":true,
-            "hasChild":false,
-            "compId":5,
             "child":[
                 ]
         }],
