--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AddAbleNode.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AddAbleNode.ui
@@ -2,7 +2,8 @@
     "x":0,
     "type":"MindMapTreeBase",
     "selectedBox":1,
-    "props":{"width":168,"sceneColor":"#000000","height":30},
+    "selecteID":3,
+    "props":{"width":105,"sceneColor":"#000000","height":23},
     "nodeParent":-1,
     "label":"MindMapTreeBase",
     "isOpen":true,
@@ -13,10 +14,10 @@
     "child":[
         {
             "x":15,
-            "type":"TextInput",
-            "props":{"y":4,"x":5,"width":95,"text":"物品","skin":"comp/input_22.png","promptColor":"#f31713","height":22,"color":"#e80d09"},
+            "type":"Label",
+            "props":{"y":2,"x":0,"width":63,"text":"触发方式","styleSkin":"comp/label.png","height":21,"color":"#e72320"},
             "nodeParent":1,
-            "label":"TextInput",
+            "label":"Label",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
@@ -26,10 +27,10 @@
         },
         {
             "x":15,
-            "type":"TextInput",
-            "props":{"y":4,"x":108,"width":60,"text":"数量","skin":"comp/input_22.png","height":22,"color":"#ec130f"},
+            "type":"Button",
+            "props":{"y":0,"x":79,"width":26,"skin":"comp/button.png","label":"+","height":24},
             "nodeParent":1,
-            "label":"TextInput",
+            "label":"Button",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
