--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/ActionRoot.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/ActionRoot.ui
@@ -2,7 +2,8 @@
     "x":0,
     "type":"MindMapTreeBase",
     "selectedBox":1,
-    "props":{"width":168,"sceneColor":"#000000","height":30},
+    "selecteID":3,
+    "props":{"width":63,"sceneColor":"#000000","height":55},
     "nodeParent":-1,
     "label":"MindMapTreeBase",
     "isOpen":true,
@@ -13,10 +14,10 @@
     "child":[
         {
             "x":15,
-            "type":"TextInput",
-            "props":{"y":4,"x":5,"width":95,"text":"物品","skin":"comp/input_22.png","promptColor":"#f31713","height":22,"color":"#e80d09"},
+            "type":"Label",
+            "props":{"y":4,"x":0,"width":63,"var":"actionTxt","text":"操作","styleSkin":"comp/label.png","height":21,"color":"#e72320"},
             "nodeParent":1,
-            "label":"TextInput",
+            "label":"Label(actionTxt)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
@@ -26,10 +27,10 @@
         },
         {
             "x":15,
-            "type":"TextInput",
-            "props":{"y":4,"x":108,"width":60,"text":"数量","skin":"comp/input_22.png","height":22,"color":"#ec130f"},
+            "type":"Label",
+            "props":{"y":34,"x":-2,"width":51,"var":"desTxt","text":"描述","styleSkin":"comp/label.png","height":21,"color":"#e72320"},
             "nodeParent":1,
-            "label":"TextInput",
+            "label":"Label(desTxt)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
