--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/DataOperate.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/DataOperate.ui
@@ -1,11 +1,10 @@
 {
     "x":0,
-    "type":"View",
+    "type":"MindMapTreeBase",
     "selectedBox":1,
-    "selecteID":3,
     "props":{"width":240,"sceneColor":"#000000","height":30},
     "nodeParent":-1,
-    "label":"View",
+    "label":"MindMapTreeBase",
     "isOpen":true,
     "isDirectory":true,
     "isAniNode":true,
