--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AnswerFlowEditor.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AnswerFlowEditor.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":1,
-    "selecteID":16,
+    "selectedBox":5,
+    "selecteID":4,
     "props":{"width":600,"sceneColor":"#000000","height":600},
     "nodeParent":-1,
     "label":"View",
@@ -28,16 +28,17 @@
         {
             "x":15,
             "type":"List",
-            "props":{"x":19,"width":67,"top":30,"bottom":5},
+            "props":{"x":19,"width":67,"var":"actionList","top":30,"bottom":5},
             "nodeParent":1,
-            "label":"List",
-            "isOpen":null,
+            "label":"List(actionList)",
+            "isOpen":true,
             "isDirectory":true,
             "isAniNode":true,
             "hasChild":true,
             "compId":7,
             "child":[
                 {
+                    "x":30,
                     "type":"Box",
                     "props":{"name":"render"},
                     "nodeParent":7,
@@ -49,10 +50,11 @@
                     "compId":5,
                     "child":[
                         {
+                            "x":45,
                             "type":"Label",
-                            "props":{"width":53,"text":"label","styleSkin":"comp/label.png","height":15,"color":"#ef3431"},
+                            "props":{"width":53,"text":"label","styleSkin":"comp/label.png","name":"label","height":15,"color":"#ef3431"},
                             "nodeParent":5,
-                            "label":"Label",
+                            "label":"Label(label)",
                             "isDirectory":false,
                             "isAniNode":false,
                             "hasChild":false,
@@ -66,9 +68,9 @@
             "x":15,
             "type":"UIView",
             "source":"answerflow/Action.ui",
-            "props":{"y":1,"x":83},
+            "props":{"y":1,"x":83,"var":"actionEditor","runtime":"answerflow.Action"},
             "nodeParent":1,
-            "label":"UIView",
+            "label":"UIView(actionEditor)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
@@ -79,9 +81,9 @@
         {
             "x":15,
             "type":"Button",
-            "props":{"top":5,"skin":"comp/button.png","right":5,"label":"label"},
+            "props":{"var":"saveBtn","top":5,"skin":"comp/button.png","right":5,"label":"label"},
             "nodeParent":1,
-            "label":"Button",
+            "label":"Button(saveBtn)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
