--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/ItemData.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/ItemData.ui
@@ -2,6 +2,7 @@
     "x":0,
     "type":"MindMapTreeBase",
     "selectedBox":1,
+    "selecteID":3,
     "props":{"width":168,"sceneColor":"#000000","height":30},
     "nodeParent":-1,
     "label":"MindMapTreeBase",
@@ -14,9 +15,9 @@
         {
             "x":15,
             "type":"TextInput",
-            "props":{"y":4,"x":5,"width":95,"text":"物品","skin":"comp/input_22.png","promptColor":"#f31713","height":22,"color":"#e80d09"},
+            "props":{"y":4,"x":5,"width":95,"var":"item","text":"物品","skin":"comp/input_22.png","promptColor":"#f31713","height":22,"color":"#e80d09"},
             "nodeParent":1,
-            "label":"TextInput",
+            "label":"TextInput(item)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
@@ -27,9 +28,9 @@
         {
             "x":15,
             "type":"TextInput",
-            "props":{"y":4,"x":108,"width":60,"text":"数量","skin":"comp/input_22.png","height":22,"color":"#ec130f"},
+            "props":{"y":4,"x":108,"width":60,"var":"count","text":"数量","skin":"comp/input_22.png","height":22,"color":"#ec130f"},
             "nodeParent":1,
-            "label":"TextInput",
+            "label":"TextInput(count)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
