--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AnswerFlowEditor.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AnswerFlowEditor.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":5,
-    "selecteID":4,
+    "selectedBox":1,
+    "selecteID":2,
     "props":{"width":600,"sceneColor":"#000000","height":600},
     "nodeParent":-1,
     "label":"View",
@@ -68,7 +68,7 @@
             "x":15,
             "type":"UIView",
             "source":"answerflow/Action.ui",
-            "props":{"y":1,"x":83,"var":"actionEditor","runtime":"answerflow.Action"},
+            "props":{"var":"actionEditor","top":30,"runtime":"answerflow.Action","right":20,"left":80,"bottom":20},
             "nodeParent":1,
             "label":"UIView(actionEditor)",
             "isDirectory":false,
@@ -81,7 +81,7 @@
         {
             "x":15,
             "type":"Button",
-            "props":{"var":"saveBtn","top":5,"skin":"comp/button.png","right":5,"label":"label"},
+            "props":{"var":"saveBtn","top":5,"skin":"comp/button.png","right":5,"label":"save"},
             "nodeParent":1,
             "label":"Button(saveBtn)",
             "isDirectory":false,
