--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/ItemData.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/ItemData.ui
@@ -2,8 +2,8 @@
     "x":0,
     "type":"MindMapTreeBase",
     "selectedBox":1,
-    "selecteID":3,
-    "props":{"width":168,"sceneColor":"#000000","height":30},
+    "selecteID":4,
+    "props":{"width":200,"sceneColor":"#000000","height":30},
     "nodeParent":-1,
     "label":"MindMapTreeBase",
     "isOpen":true,
@@ -35,6 +35,19 @@
             "isAniNode":true,
             "hasChild":false,
             "compId":3,
+            "child":[
+                ]
+        },
+        {
+            "x":15,
+            "type":"Button",
+            "props":{"y":3,"x":173,"width":26,"var":"removeBtn","skin":"comp/button.png","label":"-","height":24},
+            "nodeParent":1,
+            "label":"Button(removeBtn)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":4,
             "child":[
                 ]
         }],
