--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AddAbleNode.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AddAbleNode.ui
@@ -2,7 +2,7 @@
     "x":0,
     "type":"MindMapTreeBase",
     "selectedBox":1,
-    "selecteID":3,
+    "selecteID":2,
     "props":{"width":105,"sceneColor":"#000000","height":23},
     "nodeParent":-1,
     "label":"MindMapTreeBase",
@@ -14,10 +14,10 @@
     "child":[
         {
             "x":15,
-            "type":"Label",
-            "props":{"y":2,"x":0,"width":63,"var":"txt","text":"触发方式","styleSkin":"comp/label.png","height":21,"color":"#e72320"},
+            "type":"TextInput",
+            "props":{"y":1,"x":1,"width":71,"var":"txt","text":"触发方式","skin":"comp/input_22.png","height":21,"color":"#e72320"},
             "nodeParent":1,
-            "label":"Label(txt)",
+            "label":"TextInput(txt)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
