--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AnswerFlowEditor.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AnswerFlowEditor.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":1,
-    "selecteID":16,
+    "selectedBox":17,
+    "selecteID":21,
     "props":{"width":600,"sceneColor":"#000000","height":600},
     "nodeParent":-1,
     "label":"View",
@@ -105,29 +105,17 @@
             "child":[
                 {
                     "x":30,
-                    "type":"Box",
-                    "props":{"name":"render"},
+                    "type":"UIView",
+                    "source":"answerflow/ItemListItem.ui",
+                    "props":{"runtime":"answerflow.ItemListItem","name":"render"},
                     "nodeParent":17,
-                    "label":"Box(render)",
-                    "isOpen":true,
-                    "isDirectory":true,
+                    "label":"UIView(render)",
+                    "isDirectory":false,
                     "isAniNode":false,
-                    "hasChild":true,
-                    "compId":18,
+                    "hasChild":false,
+                    "compId":21,
                     "child":[
-                        {
-                            "x":45,
-                            "type":"TextInput",
-                            "props":{"width":53,"text":"label","skin":"comp/input_22.png","name":"label","height":15,"color":"#ef3431"},
-                            "nodeParent":18,
-                            "label":"TextInput(label)",
-                            "isDirectory":false,
-                            "isAniNode":false,
-                            "hasChild":false,
-                            "compId":19,
-                            "child":[
-                                ]
-                        }]
+                        ]
                 }]
         },
         {
