--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AnswerFlowEditor.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AnswerFlowEditor.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":17,
-    "selecteID":21,
+    "selectedBox":1,
+    "selecteID":17,
     "props":{"width":600,"sceneColor":"#000000","height":600},
     "nodeParent":-1,
     "label":"View",
@@ -28,7 +28,7 @@
         {
             "x":15,
             "type":"List",
-            "props":{"x":19,"width":67,"var":"actionList","vScrollBarSkin":"comp/vscroll.png","top":30,"bottom":5},
+            "props":{"x":19,"width":96,"var":"actionList","vScrollBarSkin":"comp/vscroll.png","top":30,"repeatX":1,"height":565,"bottom":5},
             "nodeParent":1,
             "label":"List(actionList)",
             "isOpen":true,
@@ -68,7 +68,7 @@
             "x":15,
             "type":"UIView",
             "source":"answerflow/Action.ui",
-            "props":{"var":"actionEditor","top":30,"runtime":"answerflow.Action","right":20,"left":80,"bottom":20},
+            "props":{"var":"actionEditor","top":30,"runtime":"answerflow.Action","right":20,"left":131,"bottom":20},
             "nodeParent":1,
             "label":"UIView(actionEditor)",
             "isDirectory":false,
@@ -94,7 +94,7 @@
         {
             "x":15,
             "type":"List",
-            "props":{"var":"itemList","vScrollBarSkin":"comp/vscroll.png","top":5,"spaceY":5,"spaceX":5,"right":200,"left":110,"height":39},
+            "props":{"var":"itemList","vScrollBarSkin":"comp/vscroll.png","top":5,"spaceY":5,"spaceX":5,"right":200,"left":132,"height":39},
             "nodeParent":1,
             "label":"List(itemList)",
             "isOpen":true,
