--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AnswerFlowEditor.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/AnswerFlowEditor.ui
@@ -2,7 +2,7 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":17,
+    "selecteID":6,
     "props":{"width":600,"sceneColor":"#000000","height":600},
     "nodeParent":-1,
     "label":"View",
@@ -15,9 +15,9 @@
         {
             "x":15,
             "type":"Label",
-            "props":{"y":6,"x":20,"width":53,"text":"操作","styleSkin":"comp/label.png","height":15,"color":"#ef3431"},
+            "props":{"y":6,"x":20,"width":53,"var":"actionTipTxt","text":"操作","styleSkin":"comp/label.png","height":15,"color":"#ef3431"},
             "nodeParent":1,
-            "label":"Label",
+            "label":"Label(actionTipTxt)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
