--- a/actorgame/laya/pages/actorgame/GameMain.ui
+++ b/actorgame/laya/pages/actorgame/GameMain.ui
@@ -15,9 +15,9 @@
         {
             "x":15,
             "type":"Button",
-            "props":{"y":959,"x":234,"width":252,"skin":"comp/button.png","labelSize":30,"labelColors":"#ffffff","label":"开始","height":97},
+            "props":{"y":959,"x":234,"width":252,"var":"startBtn","skin":"comp/button.png","labelSize":30,"labelColors":"#ffffff","label":"开始","height":97},
             "nodeParent":1,
-            "label":"Button",
+            "label":"Button(startBtn)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
@@ -28,9 +28,9 @@
         {
             "x":15,
             "type":"List",
-            "props":{"y":122,"x":41,"width":630,"spaceY":20,"spaceX":40,"repeatY":2,"repeatX":3,"height":605},
+            "props":{"y":122,"x":41,"width":630,"var":"roleList","spaceY":20,"spaceX":40,"repeatY":2,"repeatX":3,"height":605},
             "nodeParent":1,
-            "label":"List",
+            "label":"List(roleList)",
             "isOpen":true,
             "isDirectory":true,
             "isAniNode":true,
