--- a/actorgame/laya/pages/actorgame/QuestionPage.ui
+++ b/actorgame/laya/pages/actorgame/QuestionPage.ui
@@ -14,65 +14,40 @@
     "child":[
         {
             "x":15,
-            "type":"Box",
-            "props":{"y":0,"x":0,"width":599,"height":543},
+            "type":"Label",
+            "props":{"y":20,"x":0,"width":599,"var":"questionTxt","text":"游戏市场数据不错，是否换皮刷钱","styleSkin":"comp/label.png","height":149,"fontSize":30,"color":"#ffffff","align":"center"},
             "nodeParent":1,
-            "label":"Box",
+            "label":"Label(questionTxt)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":2,
+            "child":[
+                ]
+        },
+        {
+            "x":15,
+            "type":"List",
+            "props":{"y":254,"x":164,"width":275,"var":"selectList","spaceY":20,"height":248},
+            "nodeParent":1,
+            "label":"List(selectList)",
             "isOpen":true,
             "isDirectory":true,
             "isAniNode":true,
             "hasChild":true,
-            "compId":5,
+            "compId":8,
             "child":[
                 {
                     "x":30,
-                    "type":"Label",
-                    "props":{"y":20,"x":0,"width":599,"text":"游戏市场数据不错，是否换皮刷钱","styleSkin":"comp/label.png","height":149,"fontSize":30,"color":"#ffffff","align":"center"},
-                    "nodeParent":5,
-                    "label":"Label",
+                    "type":"UIView",
+                    "source":"actorgame/QuestionSelectItem.ui",
+                    "props":{"name":"render"},
+                    "nodeParent":8,
+                    "label":"UIView(render)",
                     "isDirectory":false,
-                    "isAniNode":true,
+                    "isAniNode":false,
                     "hasChild":false,
-                    "compId":2,
-                    "child":[
-                        ]
-                },
-                {
-                    "x":30,
-                    "type":"Button",
-                    "props":{"y":268,"x":162,"width":275,"skin":"comp/button.png","labelSize":30,"labelColors":"#ffffff","label":"选项1","height":67},
-                    "nodeParent":5,
-                    "label":"Button",
-                    "isDirectory":false,
-                    "isAniNode":true,
-                    "hasChild":false,
-                    "compId":3,
-                    "child":[
-                        ]
-                },
-                {
-                    "x":30,
-                    "type":"Button",
-                    "props":{"y":362,"x":162,"width":275,"skin":"comp/button.png","labelSize":30,"labelColors":"#ffffff","label":"选项2","height":67},
-                    "nodeParent":5,
-                    "label":"Button",
-                    "isDirectory":false,
-                    "isAniNode":true,
-                    "hasChild":false,
-                    "compId":4,
-                    "child":[
-                        ]
-                },
-                {
-                    "x":30,
-                    "type":"Button",
-                    "props":{"y":452,"x":162,"width":275,"skin":"comp/button.png","labelSize":30,"labelColors":"#ffffff","label":"选项3","height":67},
-                    "nodeParent":5,
-                    "label":"Button",
-                    "isDirectory":false,
-                    "isAniNode":true,
-                    "hasChild":false,
-                    "compId":6,
+                    "compId":7,
                     "child":[
                         ]
                 }]
