--- a/actorgame/laya/pages/actorgame/StarItem.ui
+++ b/actorgame/laya/pages/actorgame/StarItem.ui
@@ -2,8 +2,8 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":3,
-    "props":{"width":177,"sceneWidth":177,"sceneHeight":275,"sceneColor":"#000000","height":275},
+    "selecteID":2,
+    "props":{"width":28,"sceneWidth":28,"sceneHeight":28,"sceneColor":"#000000","height":28},
     "nodeParent":-1,
     "label":"View",
     "isOpen":true,
@@ -15,26 +15,13 @@
         {
             "x":15,
             "type":"Image",
-            "props":{"y":0,"x":0,"width":177,"var":"icon","skin":"comp/image.png","height":177},
+            "props":{"var":"icon","skin":"comp/prop.png"},
             "nodeParent":1,
             "label":"Image(icon)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
             "compId":2,
-            "child":[
-                ]
-        },
-        {
-            "x":15,
-            "type":"Label",
-            "props":{"y":230,"x":1,"width":167,"var":"nameTxt","text":"名字","styleSkin":"comp/label.png","height":45,"fontSize":30,"color":"#ffffff","align":"center"},
-            "nodeParent":1,
-            "label":"Label(nameTxt)",
-            "isDirectory":false,
-            "isAniNode":true,
-            "hasChild":false,
-            "compId":3,
             "child":[
                 ]
         }],
