--- a/actorgame/laya/pages/actorgame/ReportPage.ui
+++ b/actorgame/laya/pages/actorgame/ReportPage.ui
@@ -15,9 +15,9 @@
         {
             "x":15,
             "type":"Label",
-            "props":{"y":74,"x":276,"width":167,"text":"报告","styleSkin":"comp/label.png","height":45,"fontSize":30,"color":"#ffffff","align":"center"},
+            "props":{"y":74,"x":276,"width":167,"var":"titleTxt","text":"报告","styleSkin":"comp/label.png","height":45,"fontSize":30,"color":"#ffffff","align":"center"},
             "nodeParent":1,
-            "label":"Label",
+            "label":"Label(titleTxt)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
@@ -28,9 +28,9 @@
         {
             "x":15,
             "type":"Label",
-            "props":{"y":187,"x":60,"width":599,"text":"各种统计信息","styleSkin":"comp/label.png","height":45,"fontSize":30,"color":"#ffffff","align":"center"},
+            "props":{"y":187,"x":60,"width":599,"var":"infoTxt","text":"各种统计信息","styleSkin":"comp/label.png","height":45,"fontSize":30,"color":"#ffffff","align":"center"},
             "nodeParent":1,
-            "label":"Label",
+            "label":"Label(infoTxt)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
@@ -41,9 +41,9 @@
         {
             "x":15,
             "type":"List",
-            "props":{"y":291,"x":102,"width":539,"spaceY":20,"repeatY":6,"repeatX":1,"height":600},
+            "props":{"y":291,"x":102,"width":539,"var":"reportList","spaceY":20,"repeatY":6,"repeatX":1,"height":600},
             "nodeParent":1,
-            "label":"List",
+            "label":"List(reportList)",
             "isOpen":true,
             "isDirectory":true,
             "isAniNode":true,
@@ -68,9 +68,9 @@
         {
             "x":15,
             "type":"Button",
-            "props":{"y":1006,"x":234,"width":252,"skin":"comp/button.png","labelSize":30,"labelColors":"#ffffff","label":"继续","height":97},
+            "props":{"y":1006,"x":234,"width":252,"var":"continueBtn","skin":"comp/button.png","labelSize":30,"labelColors":"#ffffff","label":"继续","height":97},
             "nodeParent":1,
-            "label":"Button",
+            "label":"Button(continueBtn)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
